--- a/chart/src/index.css
+++ b/chart/src/index.css
@@ -90,23 +90,17 @@ font-size: 20px
   align-items: flex-start;
   padding: 10px;
   gap: 8px;
-  width: 280px;
+  width: 260px;
   height: 160px;
-
   position: absolute;
   left: 55.71%;
   right: 16.94%;
   top: 33%;
   bottom: 48%;
-
   background: rgba(60, 66, 84, 0.5);
-/* Base/Grey 60 */
-
-border: 1px solid #3C4254;
-backdrop-filter: blur(14px);
-/* Note: backdrop-filter has minimal browser support */
-
-border-radius: 8px;
+  border: 1px solid #3C4254;
+  backdrop-filter: blur(14px);
+  border-radius: 8px;
 }
 
 .container {
@@ -136,4 +130,12 @@ border-radius: 8px;
   border: none;
   margin-right: 1050px;
   margin-top: 65px;
+}
+
+.up {
+  color: #11CABE;
+}
+
+.down {
+  color: #FA2256;
 }
