--- a/chart/src/index.css
+++ b/chart/src/index.css
@@ -63,11 +63,19 @@ font-size: 20px
   background-color: #246CF9;
   border: none;
   color: white;
-  padding: 5px 15px;
+  padding: 6px 15px;
+  width: 80px;
+  height: 35px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 20px;
+  border-radius: 6px;
+}
+
+.daily {
+  margin-right: -1100px;
+  margin-top: -30px;
 }
 
 .btn2 {
@@ -78,24 +86,25 @@ font-size: 20px
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 22px;
+  border-radius: 6px;
 }
 
 
 .card {
   box-sizing: border-box;
-  display: flex;
+ display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   padding: 10px;
   gap: 8px;
-  width: 260px;
-  height: 160px;
+  width: 320px;
+  height: 180px;
   position: absolute;
-  left: 55.71%;
-  right: 16.94%;
-  top: 33%;
+  left: 51.71%;
+  right: 12.94%;
+  top: 28%;
   bottom: 48%;
   background: rgba(60, 66, 84, 0.5);
   border: 1px solid #3C4254;
@@ -106,8 +115,8 @@ font-size: 20px
 .container {
   color: white;
   margin-top: -28px;
-  margin-left: 10px;
-  font-size: 20px;
+  margin-left: 30px;
+  font-size: 23px;
 }
 
 .signup {
@@ -123,10 +132,11 @@ font-size: 20px
   font-size: 20px;
   gap: 4px;
   color: #30E0A1;
-  width: 85px;
+  width: 95px;
+  font-size: 25px;
   height: 45px;
   background: rgba(48, 224, 161, 0.2);
-  border-radius: 6px;
+  border-radius: 10px;
   border: none;
   margin-right: 1050px;
   margin-top: 65px;
@@ -138,4 +148,27 @@ font-size: 20px
 
 .down {
   color: #FA2256;
+}
+
+.view1 {
+  height: 22px;
+  width: 22px;
+  background-color: white;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: -380px;
+}
+
+.last {
+  margin-top: -30px;
+  font-size: 23px;
+  margin-left: 380px;
+  color: white;
+}
+
+.this {
+  margin-top: -40px;
+  font-size: 23px;
+  margin-left: 720px;
+  color: white;
 }
